--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <slider [items]="popularMovies" ></slider>
 <item-banner [items]="upcomingMovies" title="Up Coming Movies" ></item-banner>
 <item-banner [items]="topratedMovies" title="Top Rated Movies"></item-banner>
-<item-banner [items]="popularTV" title="Tv Shows"></item-banner>
+<item-banner [items]="popularTvShows" title="Tv Shows"></item-banner>
 
