--- a/src/app/pages/movie/movie.component.html
+++ b/src/app/pages/movie/movie.component.html
@@ -48,7 +48,7 @@
     </ng-container>
     </div>
     </p-tabPanel>
-    <p-tabPanel header="photos">
+    <p-tabPanel header="Photos">
         <div class="grid">
             <ng-container *ngFor="let movieImage of  movieImages?.backdrops">
                 <div class="col-12 md:col-3 lg:col-3">
