--- a/src/app/components/item/item.component.html
+++ b/src/app/components/item/item.component.html
@@ -1,12 +1,12 @@
 <ng-container *ngIf="itemData">
-<a  class="item" [routerLink]="'/movie/'+itemData.id">
+<a  class="item" [routerLink]="itemData.title ? '/movie/' + itemData.id : '/tvshow/' + itemData.id">
 <div class="item-rating">
 <i class="app-icons">star</i>
 <span>{{itemData.vote_average}}</span>/10
 </div>
 <div class="item-image">
-    <img class="slide-bg-image" [src]=" imageSize.medium+itemData.poster_path" alt=""> 
+    <img class="slide-bg-image" [src]=" imageSize.medium+itemData.poster_path" alt="itemData.title ?? itemData."> 
 </div>
-<div class="item-title">{{itemData.title}}</div>
+<div class="item-title">{{itemData.title ?? itemData.name}}</div>
 </a>
 </ng-container>
