--- a/src/app/pages/tv-shows/tv-shows.component.html
+++ b/src/app/pages/tv-shows/tv-shows.component.html
@@ -1,10 +1,11 @@
 <div class="container">
     <div class="grid">
-        <div class="col-6 md:col-2  lg:col-3" *ngFor="let tvshow of tvShows">
-            <item [itemData]="tvshow"></item>
-        </div>
+        <div class="col-6 md:col-3 lg:col-3" *ngFor="let tvShow of tvShows">
+                <item [itemData]="tvShow"></item>
+              
+          </div>
     </div>
     <div>
-        <p-paginator [rows]="20" [totalRecords]="50"></p-paginator>
+        <p-paginator [rows]="20" [totalRecords]="10000"   (onPageChange)="paginate($event)"></p-paginator>
     </div>
 </div>
